<resources>
    <string name="app_name">ShopApp</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?&#160;</string>
    <string name="sign_up">Sign Up&#160;</string>
    <string name="here">here</string>
    <string name="log_in">LogIn</string>
</resources>