<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LogIn.LogInFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:src="@mipmap/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_marginTop="70dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        app:hintTextColor="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:textColorHint="@color/main_color"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_marginTop="35dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:hintTextColor="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:textColorHint="@color/main_color"
            android:maxLines="1"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:text="@string/remember_me"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:layout_marginStart="37dp"
        android:layout_marginTop="50dp"/>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogIn"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/cbRememberMe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        layout="@layout/main_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:background="@null"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/here"
        android:textSize="14sp"
        android:layout_marginTop="76dp"
        app:layout_constraintTop_toBottomOf="@id/btnForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>